update for new kustomize client

--- a/hello-app/overlays/production/deployment-patch.yaml
+++ b/hello-app/overlays/production/deployment-patch.yaml
@@ -2,6 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello
-  namespace: kust-prod
+  namespace: kust-test
 spec:
   replicas: 4
