--- a/hello-app/overlays/production/kustomization.yaml
+++ b/hello-app/overlays/production/kustomization.yaml
@@ -1,3 +1,7 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+namespace: kust-prod
+
 bases:
 - ../../base
 patches:
@@ -5,3 +9,5 @@ patches:
 - service-patch.yaml
 - route-patch.yaml
 
+configurations:
+- namespace.yaml
